test/samples/valid/interp/fill_struct.maruir
struct Foo {
    a: uint8;
    b: int16;
    c: bool;
}

fun main()
locals arr: Foo *#memory;
{
    entry:
        arr := alloc Foo in #memory;
        store uint8(1) in arr.a;
        store int16(-257) in arr.b;
        store true in arr.c;

        return;
}