test/samples/invalid/interp/arr_poison.maruir
fun main(): u8
locals arr: u8[] *#memory, res: u8;
{
    entry:
        arr := alloc u8[u8(3)] in #memory;
        load arr[u8(2)] in res;

        return res;
}
